--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,53 @@ p {
   text-align: center;
   color: #fff;
 }
+.hero {
+  width: 1440px;
+  height: 600px;
+  background: #2e2f42;
+}
+button {
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 111%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+h3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.team {
+  width: 1440px;
+  height: 732px;
+  background: #f4f4fd;
+}
+footer {
+  background: #2e2f42;
+  width: 1440px;
+  height: 312px;
+}
+.logo {
+  width: 115px;
+  height: 24px;
+}
