--- a/css/styles.css
+++ b/css/styles.css
@@ -87,4 +87,10 @@ footer {
 .logo {
   width: 115px;
   height: 24px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
