--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@ body {
   font-family: "Roboto", sans-serif;
   background-attachment: #fff;
   border-bottom: 1px solid #e7e9fc;
-  width: 1440px;
-  height: 72px;
 }
 p {
   font-family: "Roboto", sans-serif;
@@ -39,16 +37,9 @@ p {
   color: #fff;
 }
 .hero {
-  width: 1440px;
-  height: 600px;
   background: #2e2f42;
 }
 button {
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
-  height: 56px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -75,22 +66,22 @@ h3 {
   color: #2e2f42;
 }
 .team {
-  width: 1440px;
-  height: 732px;
   background: #f4f4fd;
 }
 footer {
   background: #2e2f42;
-  width: 1440px;
-  height: 312px;
 }
 .logo {
-  width: 115px;
-  height: 24px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 117%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
 }
