--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-attachment: #fff;
-  border-bottom: 1px solid #e7e9fc;
+  background-attachment: #ffffff;
+  color: #434455;
 }
 p {
   font-weight: 400;
@@ -30,7 +30,6 @@ p {
   line-height: 107%;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #fff;
 }
 .hero {
   background: #2e2f42;
@@ -42,7 +41,6 @@ button {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.04em;
-  color: #fff;
 }
 h2 {
   font-weight: 700;
@@ -65,6 +63,7 @@ h3 {
 }
 footer {
   background: #2e2f42;
+  font-family: "Raleway", sans-serif;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -80,4 +79,25 @@ ul {
 a {
   text-decoration: none;
   cursor: pointer;
+}
+button:hover {
+  color: #404bbf;
+}
+button:active {
+  color: #404bbf;
+}
+.our-team {
+  text-transform: capitalize;
+}
+.our-team-discr {
+  font-size: 16px;
+}
+.portfolio {
+  text-transform: capitalize;
+}
+.studio {
+  color: #f4f4fd;
+}
+.end {
+  color: #f4f4fd;
 }
