--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-attachment: #ffffff;
+  background-color: #ffffff;
   color: #434455;
 }
 p {
@@ -36,6 +36,7 @@ p {
 }
 button {
   background: #4d5ae5;
+  font-family: "Roboto", sans-serif;
 
   font-weight: 500;
   font-size: 16px;
@@ -72,6 +73,7 @@ footer {
   line-height: 117%;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
 }
 ul {
   list-style-type: none;
@@ -100,4 +102,16 @@ button:active {
 }
 .end {
   color: #f4f4fd;
+}
+.studio-head {
+  color: #2e2f42;
+}
+.address {
+  font-style: normal;
+}
+nav > a:hover {
+  color: #404bbf;
+}
+nav > a:active {
+  color: #404bbf;
 }
