--- a/css/styles.css
+++ b/css/styles.css
@@ -33,15 +33,17 @@ p {
 }
 .hero {
   background: #2e2f42;
+  color: #ffffff;
 }
-button {
+.button {
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
-
+  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.04em;
+  cursor: pointer;
 }
 h2 {
   font-weight: 700;
@@ -62,7 +64,7 @@ h3 {
 .team {
   background: #f4f4fd;
 }
-footer {
+.footer {
   background: #2e2f42;
   font-family: "Raleway", sans-serif;
 }
@@ -82,10 +84,10 @@ a {
   text-decoration: none;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #404bbf;
 }
-button:active {
+.button:active {
   color: #404bbf;
 }
 .our-team {
@@ -109,9 +111,47 @@ button:active {
 .address {
   font-style: normal;
 }
-nav > a:hover {
+.link-top-one:hover {
   color: #404bbf;
 }
-nav > a:active {
+.link-top-one:active {
   color: #404bbf;
+}
+.link-top-one {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.link-address {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.link-address:hover {
+  color: #404bbf;
+}
+.link-address:active {
+  color: #404bbf;
+}
+.our-team-list {
+  color: #ffffff;
+}
+.strategy {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.strategy-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
