--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ h3 {
   color: #2e2f42;
 }
 .team {
-  background-color: #f4f4fd;
+  background-color: #ffffff;
 }
 .footer {
   background: #2e2f42;
@@ -168,4 +168,10 @@ a {
 }
 .button:focus {
   background-color: #404bbf;
+}
+.link-top-one:focus {
+  color: #404bbf;
+}
+.list-team {
+  background-color: #ffffff;
 }
